Leon update test case phần Search và Sort data

--- a/pom.xml
+++ b/pom.xml
@@ -182,9 +182,9 @@
 					</suiteXmlFiles>
 
 					<!-- Argument -->
-					<argLine>
+					<!-- <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                    </argLine>
+                    </argLine>-->
 				</configuration>
 
 
