Leon update test case admin

--- a/environmentConfig/dev.properties
+++ b/environmentConfig/dev.properties
@@ -1,1 +1,4 @@
 App.url=https://demo.nopcommerce.com/
+Admin.url=https://admin-demo.nopcommerce.com/login?ReturnUrl=/admin/
+admin.user=admin@yourstore.com
+admin.pass=admin
